[package]
name = "yuan-shen"
version = "0.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "A modern source code and asset version management system"
repository = "https://github.com/oovm/YuanShen"
documentation = "https://docs.rs/yuan-shen"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[[bin]]
name = "ys"
path = "src/main.rs"

[[bin]]
name = "源神"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
clap_builder = "4.5.2"
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.115"

[dependencies.ys-core]
version = "0.0.*"
path = "../ys-core"




[dev-dependencies]



[features]
default = []

[package.metadata.docs.rs]
all-features = true
