[package]
name = "ys-core"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "A modern source code and asset version management system"
repository = "https://github.com/oovm/YuanShen"
documentation = "https://docs.rs/yuan-shen"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
blake3 = { version = "1.3.3", features = ["std"] }
tracing = "0.1.40"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.37.0", features = [] }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tempfile = "3.10.1"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
