[package]
name = "ys-postgres"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "A modern source code and asset version management system"
repository = "https://github.com/oovm/YuanShen"
documentation = "https://docs.rs/yuan-shen"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
tokio = { version = "1.37.0", features = [] }
tokio-postgres = "0.7.10"

[dependencies.ys-core]
version = "0.0.*"
path = "../ys-core"

[dev-dependencies]
tokio-test = "0.4.4"
tokio = { version = "1.37.0", features = ["full"] }
tempfile = "3.10.1"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
